--- a/css/index.css
+++ b/css/index.css
@@ -147,7 +147,7 @@ a{
     border: none;
     width: 25px;
     height: 25px;
-    background: url(../img/d.png) no-repeat center;
+    background: url(../img/d.webp) no-repeat center;
     position: absolute;
     left: 12rem;
     bottom: 33.5rem;
@@ -156,7 +156,7 @@ a{
     border: none;
     width: 25px;
     height: 25px;
-    background: url(../img/d.png) no-repeat center;
+    background: url(../img/d.webp) no-repeat center;
     position: absolute;
     left: 22rem;
     bottom: 33.5rem;
